<resources>
    <string name="appname">Asian Lift</string>
    <string name="fullapp_name">Asian Lift Bangladesh</string>
    <string name="login_with_email">Login with Email</string>
    <string name="tou">Terms of Use</string>
    <string name="copyright">Copyright reserved by</string>
    <string name="morning">Good Morning</string>
    <string name="evening">Good Evening</string>
    <string name="afternoon">Good Afternoon</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="login">Login</string>
    <string name="forget_pwdq">Forget Password?</string>
    <string name="forget_pwd">Forget Password</string>
    <string name="agree">By logging in, you agree to our</string>
    <string name="up_to_date">You are using latest version.</string>
    <string name="new_update_available">New update available</string>
    <string name="released_on">Released on:</string>
    <string name="check">Check for Update</string>
    <string name="work">Work</string>
    <string name="conveyance">কনভেন্স</string>
    <string name="menu">Menu</string>
    <string name="current_balance">Current Balance</string>
    <string name="total">মোট</string>
    <string name="empty">No record found!</string>
    <string name="transaction">Transaction</string>
    <string name="tk">৳</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="website">Website</string>
    <string name="account">Account</string>
    <string name="change_password">Change Password</string>
    <string name="social_links">Social Links</string>
    <string name="fb">Facebook</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="whatsapp_it">WhatsApp ( IT )</string>
    <string name="app">App</string>
    <string name="about_app">About App</string>
    <string name="offer">Offer</string>
    <string name="offer_list">Offer List</string>
    <string name="offer_edit">Edit Offer</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="type">Type</string>
    <string name="unit">Unit</string>
    <string name="floor">Floor/Stop</string>
    <string name="shaft">Shaft Size (W x D x H)</string>
    <string name="person">Person/Load</string>
    <string name="note">Note</string>
    <string name="work_type">Work Type</string>
    <string name="product_type">Product Type</string>
    <string name="nice3000">NICE3000+</string>
    <string name="error_details">Error Details</string>
    <string name="project">Project</string>
    <string name="date">Date</string>
    <string name="with">With</string>
    <string name="payment">Payment</string>
    <string name="cash">Cash</string>
    <string name="cheque">Cheque</string>
    <string name="amount">Amount</string>
    <string name="callback">Callback</string>
    <string name="report">Report</string>
    <string name="schedule">Schedule</string>
    <string name="submit">Submit</string>
    <string name="ref">Reference</string>
    <string name="error_code">Error Code</string>
    <string name="view">View</string>
    <string name="description">Description</string>
    <string name="cause">Cause</string>
    <string name="fault_level">Fault Level</string>
    <string name="solution">Solution</string>
    <string name="el1">1A\nThe elevator running is not affected on any condition.</string>
    <string name="el21">2A\nThe parallel/group control function is disabled.</string>
    <string name="el22">2B\nThe door pre-open/re-leveling function is disabled.</string>
    <string name="el31">3A\nলো-স্পীডে, লিফট তাড়াতাড়ি থামে এবং পুনরায় চালু করতে পারে না।</string>
    <string name="el32">3B\nলো-স্পীডে, লিফট থামে না। নরমাল স্পীডে, লিফট থামে এবং ৩ সেকেন্ড পরে লো-স্পীডে চলতে পারে।</string>
    <string name="el41">4A\nলো-স্পীডে, লিফট নির্দিষ্ট গতিতে থামে এবং পুনরায় চালু করতে পারে না।</string>
    <string name="el42">4B\nলো-স্পীডে, লিফট থামে না। নরমাল স্পীডে, লিফট থামে এবং ৩ সেকেন্ড পরে লো-স্পীডে চলতে পারে।</string>
    <string name="el43">4C\nলো-স্পীডে, লিফট থামে না। নরমাল স্পীডে, লিফট থামে এবং ৩ সেকেন্ড পরে লো-স্পীডে চলতে পারে।</string>
    <string name="el51">5A\nলো-স্পীডে, লিফট সাথে সাথে থামে এবং পুনরায় চালু করতে পারে না।</string>
    <string name="el52">5B\nলো-স্পীডে, লিফট থামে না। নরমাল স্পীডে, লিফট থামে এবং ৩ সেকেন্ড পরে লো-স্পীডে চলতে পারে।</string>
    <string name="e1">E01</string>
    <string name="e1d">Invert unit protection</string>
    <string name="e1c">●	Main loop output is grounding or short wiring\n●	The connection of traction machine is too long\n●	Work condition is too hot\n●	The connections inside the controller become loose</string>
    <string name="e1s">●	Obviate exterior problems such as connection\n●	Add reactor or output filter\n●	Inspect the wind channel and fan\n●	Please contact with agent or factory</string>
    <string name="e2">E02</string>
    <string name="e2d">Overcurrent during acceleration</string>
    <string name="e2c">●	The main circuit output is grounded or short circuited.\n●	Motor auto-tuning is performed improperly.\n●	The encoder signal is incorrect.</string>
    <string name="e3">E03</string>
    <string name="e3d">Overcurrent during deceleration</string>
    <string name="e3c">●	The main circuit output is grounded or short circuited.\n●	Motor auto-tuning is performed improperly.\n●	The deceleration rate is too short.\n●	The encoder signal is incorrect.</string>
    <string name="e4">E04</string>
    <string name="e4d">Overcurrent at constant speed</string>
    <string name="e4c">●	The main circuit output is grounded or short circuited.\n●	Motor auto-tuning is performed properly.\n●	The encoder is seriously interfered with.</string>
    <string name="e234s">1. Check the contactors:\n●	Check whether the RUN contactor at the controller output side is normal.\n●	Check whether the shorting PMSM stator contactor causes short circuit at the controller output side.\n\n2. Check motor cables:\n●	Check whether the motor cables have damaged jacket, possibly short circuited to ground, and connected securely.\n●	Check insulation of motor power terminals, and check whether the motor winding is short circuited or grounded.\n\n3.	Check motor parameters:\n●	Check whether motor parameters comply with the nameplate.\n\n4.	Check the encoder:\n●	Check whether encoder pulses per revolution (PPR) is set correctly.\n●	Check whether the  encoder  signal is interfered with, whether the encoder cable runs through the duct
independently, whether the cable is too long, and whether the shield is grounded
at one end.\n●	Check whether the encoder is installed reliably, whether the rotating shaft is connected to the motor shaft reliably by observing whether the encoder is stable during normal-speed running.\n●	Check whether the encoder wirings are correct. For asynchronous motor, perform SVC and compare the current to judge whether the encoder works properly.</string>
    <string name="e5">E05</string>
    <string name="e5d">Overvoltage during acceleration</string>
    <string name="e5c">●	The input voltage is too high.\n●	The regeneration power of the motor is too high.\n●	The braking resistance is too large, or the braking unit fails.\n●	The acceleration rate is too short.</string>
    <string name="e6">E06</string>
    <string name="e6d">Overvoltage during deceleration</string>
    <string name="e6c">●	The input voltage is too high.\n●	The braking resistance is too large, or the braking unit fails.\n●	The deceleration rate is too short.</string>
    <string name="e7">E07</string>
    <string name="e7d">Overvoltage at constant speed</string>
    <string name="e7c">●	The input voltage is too high.\n●	The braking resistance is too large, or the braking unit fails.</string>
    <string name="e567s">1.	Check whether the input voltage is too high. Observe whether the bus voltage is  too high (normal: 540–580 V for 380 voltage input).\n\n2.	Check for the balance coefficient.\n\n3.	Check whether the bus voltage rises too quickly during running. If yes, the regen. resistor does not work or its model is improper:\n●	Check whether the cable connecting the regen. resistor is damaged, whether the cooper wire touches the ground, and whether the connection is reliable.\n●	Check whether the resistance is proper based on the recommendation in chapter 4 and select a proper regen. resistor.\n●	If a braking unit is used, check whether the braking unit works properly and whether the model is proper.\n\n4.	If the resistance of the regen. resistor is proper and overvoltage occurs each time when the elevator reaches the target speed, decrease the values of F2&#8211;01 or F2&#8211;04 to reduce the curve following error and prevent overvoltage due to system overshoot.\n\n5.	Check whether the acceleration/deceleration rate is too short when E05 and E06 is reported.</string>
    <string name="e8">E08</string>
    <string name="e8d">Maintenance notification period reached</string>
    <string name="e8c">●	The elevator is not maintained within the notification period.</string>
    <string name="e8s">●	Power-off and maintain the elevator.\n●	Disable the maintenance notification function by setting F9&#8211;13 to 0.\n●	Contact us or directly our agent.</string>
    <string name="e9">E09</string>
    <string name="e9d">Undervoltage</string>
    <string name="e9c">●	Instantaneous power failure occurs on the input power supply.\n●	The input voltage is too low.\n●	The drive control board fails.</string>
    <string name="e9s">●	Check whether the external power voltage is too low.\n●	Check whether the power fails during running.\n●	Check whether wiring of all power input cables is secure.\n●	Contact us or directly our agent.</string>
    <string name="e10">E10</string>
    <string name="e10d">Controller overload</string>
    <string name="e10c">●	This fault is reported generally when the controller runs at the current higher than the rated value for a long time. The causes include:\n●	The mechanical resistance is too large.\n●	The balance coefficient is improper.\n●	The encoder feedback signal is abnormal.\n●	Motor auto-tuning is not performed properly (the elevator running current is higher than the normal in this case).</string>
    <string name="e10s">Eliminate mechanical problems:\n●	Check whether the brake is released, and whether the brake power supply is normal.\n●	Check whether the balance coefficient is proper.\n●	Check whether the guide shoes are too tight.\n2. Check the motor auto-tuning result:\n●	Check whether the encoder feedback signal and parameter setting are correct, and whether the initial angle of the encoder for the PMSM is correct.\n●	Check the motor parameter setting and perform motor auto-tuning again.\n3. If this fault is reported when the slip experiment is carried on, perform the slip experiment by using the function set in F3&#8211;24.</string>
    <string name="e11">E11</string>
    <string name="e11d">Motor overload</string>
    <string name="e11c">●	FC-02 is set improperly.\n●	The mechanical resistance is too large.\n●	The balance coefficient is improper.</string>
    <string name="e11s">●	Restore FC-02 to the default value.\n●	Refer to the solution of E10.</string>
    <string name="e12">E12</string>
    <string name="e12d">Power supply phase loss</string>
    <string name="e12c">●	The power input phases are not symmetric.\n●	The drive control board fails.</string>
    <string name="e12s">●	Check whether the three phases of  power supply are balanced and whether the power voltage is normal. If not, adjust the power supply.\n●	Contact supplier.</string>
    <string name="e13">E13</string>
    <string name="e13d">Power output phase loss</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
</resources>