<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        style="@style/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp">
        <LinearLayout
            android:id="@+id/userInfoLayout"
            style="@style/linearLayout.vertical"
            android:paddingStart="15dp"
            android:paddingEnd="0dp">
            <TextView
                android:id="@+id/name"
                style="@style/text.bold"
                android:paddingTop="15dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/phone"
                style="@style/text.small"/>
            <TextView
                android:id="@+id/mail"
                style="@style/text.small"/>
        </LinearLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_margin="12dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/logo_alb"
            tools:ignore="ContentDescription"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/userInfoLayout">
            <TextView
                android:id="@+id/version"
                style="@style/menuTitle"/>
            <Button
                android:id="@+id/website"
                android:text="@string/website"
                style="@style/button.menu"/>
            <TextView
                style="@style/menuTitle"
                android:text="@string/account"/>
            <Button
                android:id="@+id/edit_profile"
                android:text="@string/edit_profile"
                style="@style/button.menu"
                app:drawableEndCompat="@drawable/ic_right"/>
            <Button
                android:id="@+id/change_password"
                android:text="@string/change_password"
                style="@style/button.menu"
                app:drawableEndCompat="@drawable/ic_right" />
            <TextView
                style="@style/menuTitle"
                android:text="@string/social_links"/>
            <Button
                android:id="@+id/facebook"
                android:text="@string/fb"
                android:paddingStart="10dp"
                android:paddingEnd="18dp"
                style="@style/button.menu"
                app:drawableEndCompat="@drawable/logo_facebook"
                android:backgroundTint="@color/facebook"/>
            <Button
                android:id="@+id/linkedin"
                android:text="@string/linkedin"
                android:paddingStart="10dp"
                android:paddingEnd="15dp"
                style="@style/button.menu"
                app:drawableEndCompat="@drawable/logo_linkedin"
                android:backgroundTint="@color/linkedin"/>
            <TextView
                style="@style/menuTitle"
                android:text="@string/app"/>
            <Button
                android:id="@+id/about_app"
                android:text="@string/about_app"
                style="@style/button.menu"
                app:drawableEndCompat="@drawable/ic_right" />

            <Button
                android:id="@+id/logout"
                android:text="@string/logout"
                style="@style/button.menu"
                android:paddingStart="10dp"
                android:paddingEnd="15dp"
                app:drawableEndCompat="@drawable/ic_logout"
                android:backgroundTint="@color/md_theme_errorContainer" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>