<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="142dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/alb"
            android:transitionName="t_img"
            tools:ignore="ContentDescription"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fullapp_name"
            android:textStyle="bold"
            android:transitionName="t_txt"
            android:textColor="#5b9bd2"
            android:gravity="center"
            android:textSize="27sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="25dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="@string/welcome"
            android:gravity="center"
            android:fontFamily="@font/oxygen_bold"
            android:textColor="@color/black"
            android:layout_marginBottom="25dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginBottom="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:importantForAutofill="no"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lpwd"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pwd"
            app:passwordToggleTint="@color/blueD"
            app:passwordToggleEnabled="true"
            app:hintAnimationEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/frgt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_gravity="end"
            android:text="@string/forget_pwdq"
            android:padding="8dp"
            android:onClick="ForgetPwd"
            android:textSize="15sp"
            android:transitionName="t_frgt"
            android:textColor="@color/blueD"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/btn"
            style="@style/btn_f"
            android:text="@string/login"
            android:onClick="SignIn"/>
        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/load"
            style="@style/SpinKitView.Circle"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="15dp"
            app:SpinKit_Color="@color/blueD"/>
        <LinearLayout
            android:id="@+id/terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/agree"
                android:textSize="15sp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAllCaps="false"
                android:onClick="Terms"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/tou"
                android:textColor="@color/blueD"
                android:textSize="15sp"
                android:padding="4dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>