<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start">
    <LinearLayout
        style="@style/llayout_vc"
        android:layout_gravity="center"
        android:paddingTop="40dp">
        <ImageView
            android:layout_width="141dp"
            android:layout_height="80dp"
            android:src="@drawable/albs"
            android:elevation="8dp"/>
        <TextView
            android:id="@+id/logo_txt"
            style="@style/text_lbw"
            android:text="@string/fullapp_name"
            android:layout_marginTop="15dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app"/>
        <Button
            style="@style/btn"
            android:layout_width="220dp"
            android:text="@string/login_with_email"
            android:textSize="18sp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:onClick="Login"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/tp"
            android:gravity="center"
            android:layout_marginTop="25dp">
            <TextView
                style="@style/text_sw"
                android:text="@string/copyright"/>
            <TextView
                style="@style/text_sw"
                android:text="@string/fullapp_name"
                android:onClick="Right"
                android:textStyle="bold"
                android:padding="4dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>