<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PasswordChange"
    android:id="@+id/main">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        style="@style/toolbarLayout">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbarLayout"
            style="@style/collapsingToolbarLayout"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/toolbar"
                app:title="Change Password"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_back"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            style="@style/linearLayout.vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                style="@style/textInputLayout"
                android:hint="@string/email">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    style="@style/textInput"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/oldPasswordLayout"
                style="@style/textInputLayout"
                android:hint="@string/old_password"
                app:passwordToggleTint="@color/blue"
                app:passwordToggleEnabled="true"
                app:hintAnimationEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/oldPassword"
                    style="@style/textInput"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newPasswordLayout"
                style="@style/textInputLayout"
                android:hint="@string/new_password"
                app:passwordToggleTint="@color/blue"
                app:passwordToggleEnabled="true"
                app:hintAnimationEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPassword"
                    style="@style/textInput"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmNewPasswordLayout"
                style="@style/textInputLayout"
                android:hint="@string/confirm_new_password"
                app:passwordToggleTint="@color/blue"
                app:passwordToggleEnabled="true"
                app:hintAnimationEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmNewPassword"
                    style="@style/textInput"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitButton"
                style="@style/button.elevated.submit"
                android:text="@string/submit"/>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressBar"
                style="@style/progressBar"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>